# rc2025

./: .gitignore  CMakeLists.txt  README.md  aruco_detector.py  go  rc2025.cpp  run.sh  tatus
arm_task/: __init__.py  arm_bridge.h  arm_controller.py  calibrate_affine.py  calibration.py  dh_offset_optimized.json  dh_optimized.json  move_state.json  task_planner.py  tool_correction_optimized.json  vision_utils.py
arm_task/_backup/: TODO.md  calibration_guide.md  dh_calib_data.json  dh_offset_optimized.json  move_state.json  tool_calib_data.json
arm_task/_backup/d1_sdk/src/: d1_enable.cpp  d1_home.cpp
arm_task/_backup/tools/: calibrate_dh.py  move_incremental.py  verify_ik.py
arm_task/bridge/: arm_calls.h  arm_utils.h  dog_alerts.h  dog_align.h  dog_turn.h  params.h
arm_task/core/: __init__.py  config.py  controller.py  d1_bridge.py
arm_task/d1_sdk/: CMakeLists.txt
arm_task/d1_sdk/src/: d1_disable.cpp  d1_safe_fold.cpp  multiple_joint_angle_control.cpp
arm_task/sign_model/: 2in1.onnx  3in1.onnx
arm_task/tools/: __init__.py  calibrate_affine.py  calibrate_dh.py  calibrate_tool.py  move_incremental.py
arm_task/vision/: __init__.py  calibration.py  camera.py  detector.py  platform.py
cv_Sign/: README.txt
cv_Sign/Res18_5in1/: best.onnx  last.onnx  main.py  readme.docx  readme.txt  requirements.txt
cv_Sign/Res18_5in2/: main.py  readme.docx  readme.txt
cv_Sign/yolo/: best.pt  example.py  main.py  readme.txt  requirements.txt
d1_arm/: CMakeLists.txt
d1_arm/scripts/: arm_actions.py  camera_d435.py  d1_pick.py  task_planner.py
d1_arm/src/: d1_disable.cpp  d1_get_arm_joint_angle.cpp  d1_move_multiple.cpp  d1_move_single.cpp  d1_safe_fold.cpp
docs/: TODO.md  VMware-Ubuntu22.04-双网卡配置指南-2.0.md  calibration_guide.md
go2_runner/: BUILD_ME.sh  CMakeLists.txt  FINAL_BUILD.sh  REBUILD.sh  REBUILD_FRESH.sh  REBUILD_NOW.sh  action_test.cpp  app_runtime.cpp  app_runtime.h  arm_bridge.h  build.sh  build_and_test.sh  callbacks.cpp  globals.cpp  globals.h  line_follow.cpp  main.cpp  params.h  test_task.cpp
go2_runner/arm_task/: arm_bridge.h
go2_runner/arm_task/bridge/: arm_utils.h  dog_alerts.h  dog_turn.h  onnx_infer.py  params.h
go2_runner/cases/: case0.cpp  case1.cpp  case2.cpp  case2.h  case2_backup_no_arm.cpp  case3.cpp  case3.h  case4.cpp
perception/d435_camera/: camera_d435.py
sport/: sport_test.cpp
sport_test_project/: CMakeLists.txt
yolo_Geometry/: get_camera.py  main.py
